--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
 
-
+   implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
 }
