--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
-    id 'androidx.navigation.safeargs'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 
@@ -91,5 +91,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
 
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+
 
 }
