--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,8 @@ dependencies {
 
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 
 }
